Reconcile inactive and undiscoverable accounts when using v3 endpoints